# codebase-mcp

./: .dockerignore  .gitattributes  .gitignore  .typos.toml  Cargo.toml  Dockerfile  README.md  deny.toml  dist-workspace.toml  server.json
.agents/skills/release/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: docker.yml  npm.yml  release.yml  rust.yml
src/: common.rs  lib.rs  main.rs  mcp.rs  version.rs
src/history/: mod.rs
src/indexer/: mod.rs
src/security/: mod.rs  path_guard.rs  rate_limiter.rs
src/tools/: ast_support.rs  atomic_write.rs  batch_tool_call.rs  compare_directories.rs  compare_symbols.rs  content_index_status.rs  convert_file_format.rs  count_file_lines.rs  create_directory.rs  create_file.rs  delete_file.rs  diff_support.rs  edit_file.rs  extract_json_schema.rs  file_summary.rs  find_definition.rs  find_json_paths.rs  find_references.rs  fuzzy_find.rs  get_call_graph.rs  get_symbols.rs  list_exports.rs  list_imports.rs  markdown_outline.rs  markdown_support.rs  mod.rs  path_filters.rs  peek_archive.rs  project_map.rs  read_file.rs  read_markdown_section.rs  read_snippets.rs  read_symbol_body.rs  resolve_path.rs  server_health.rs  sqlite_inspect.rs  text_search.rs  warm_content_index.rs  workspace_stats.rs
tests/: test_api_cleanup.rs  test_files.rs  test_phase_expansion.rs  test_qa_regressions.rs  test_write_tools.rs
